añado casos de prueba

--- a/user_data.html
+++ b/user_data.html
@@ -52,7 +52,7 @@
         </div>
 
         <div class="mb-3">
-            <label for="Edad" class="form-label">Edad</label>
+            <label for="Edad" class="form-label">Edad *</label>
             <input type="text" class="form-control" id="Edad" placeholder="Edad">
         </div>
 
